added search feature

--- a/src/app/products/product-detail.component.html
+++ b/src/app/products/product-detail.component.html
@@ -1,46 +1,52 @@
-<div class='panel panel-primary' *ngIf='product'>
+<div class='panel panel-primary' *ngIf='movie'>
     <div class='panel-heading'>
-        {{pageTitle + ': ' + product.productName}}
+        {{pageTitle + ': ' + movie.Title}}
     </div>
 
     <div class='panel-body'>
         <div class='row'>
             <div class='col-md-6'>
                 <div class='row'>
-                    <div class='col-md-3'>Name:</div>
-                    <div class='col-md-6'>{{product.productName}}</div>
+                    <div class='col-md-3'>Title:</div>
+                    <div class='col-md-6'>{{movie.Title}}</div>
                 </div>
                 <div class='row'>
-                    <div class='col-md-3'>Code:</div>
-                    <div class='col-md-6'>{{product.productCode | lowercase | convertToSpaces: '-'}}</div>
+                    <div class='col-md-3'>Year:</div>
+                    <div class='col-md-6'>{{movie.Year }}</div>
                 </div>
                 <div class='row'>
-                    <div class='col-md-3'>Description:</div>
-                    <div class='col-md-6'>{{product.description}}</div>
+                    <div class='col-md-3'>Type:</div>
+                    <div class='col-md-6'>{{movie.Type}}</div>
                 </div>
                 <div class='row'>
-                    <div class='col-md-3'>Availability:</div>
-                    <div class='col-md-6'>{{product.releaseDate}}</div>
+                    <div class='col-md-3'>Plot:</div>
+                    <div class='col-md-6'>{{movie.Plot}}</div>
                 </div>
                 <div class='row'>
-                    <div class='col-md-3'>Price:</div>
-                    <div class='col-md-6'>{{product.price|currency:'USD':'symbol'}}</div>
-                </div>
-                <div class='row'>
-                    <div class='col-md-3'>5 Star Rating:</div>
+                    <div class='col-md-3'>IMDB rating:</div>
                     <div class='col-md-6'>
-                        <pm-star [rating]='product.starRating'>
+                        {{movie.imdbRating}}
+                        <pm-star [rating]='movie.imdbRating'>
                         </pm-star>
                     </div>
                 </div>
+                <div class='row'>
+                    <div class='col-md-3'>Runtime:</div>
+                    <div class='col-md-6'>{{movie.Runtime}}</div>
+                </div>
+                <div class='row'>
+                    <div class='col-md-3'>Genre:</div>
+                    <div class='col-md-6'>{{movie.Genre}}</div>
+                </div>
+                
             </div>
 
             <div class='col-md-6'>
                 <img class='center-block img-responsive' 
                      [style.width.px]='200' 
                      [style.margin.px]='2' 
-                     [src]='product.imageUrl'
-                     [title]='product.productName'>
+                     [src]='movie.Poster'
+                     [title]='movie.Title'>
             </div>
         </div>
     </div>
