--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,17 @@
 <!--The whole content below can be removed with the new code.-->
-<div style="text-align:center">
-  <h1>
-    TaDa! Welcome to {{title}}!!
-  </h1>
-  ... Starter Files ...
+<div class="text-center">
+  <div>
+    <nav class='navbar navbar-default'>
+      <div class='container-fluid'>
+        <a class='navbar-brand'>{{pageTitle}}</a>
+        <ul class='nav navbar-nav'>
+          <li><a [routerLink]="['/welcome']">Home</a></li>
+          <li><a [routerLink]="['/movies']">Movies List</a></li>
+        </ul>
+      </div>
+    </nav>
+    <div class='container'>
+      <router-outlet></router-outlet>
+    </div>
+  </div>
 </div>
