--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,23 @@
 <!--The whole content below can be removed with the new code.-->
-<div class="text-center">
-  <div>
-    <nav class='navbar navbar-default'>
-      <div class='container-fluid'>
-        <a class='navbar-brand'>{{pageTitle}}</a>
-        <ul class='nav navbar-nav'>
-          <li><a [routerLink]="['/welcome']">Home</a></li>
-          <li><a [routerLink]="['/movies']">Movies List</a></li>
-        </ul>
-      </div>
-    </nav>
-    <div class='container'>
-      <router-outlet></router-outlet>
-    </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white my-nav">
+  <a class="navbar-brand" href="#">{{ pageTitle }}</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarColor02">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active" *ngFor="let item of menu.items">
+        <a class="nav-link" routerLink="/{{ item.link }}">{{ item.title }}</a>
+      </li>
+    </ul>
+    <!-- <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="text" placeholder="Search">
+      <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+    </form> -->
   </div>
+</nav>
+
+<div class='container'>
+  <router-outlet></router-outlet>
 </div>
