--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -1,48 +1,53 @@
-<div class='panel panel-primary'>
-    <div class='panel-heading my-4 my-text-warning'>
-      <h3>{{ pageTitle }}</h3>
+<div class="panel panel-primary">
+  <div class="panel-heading my-4 my-text-warning">
+    <h3>{{ pageTitle }}</h3>
+  </div>
+  <div class="panel-body">
+    <div class="w-100 d-flex justify-content-between align-items-start mb-4">
+      <span class="badge my-badge-warning text-white align-items-center p-2">
+        Filtered by: {{ movieSearched }}
+      </span>
+
+      <div class="w-25 d-flex flex-row">
+        <input
+          type="text"
+          class="form-control search"
+          id="movies"
+          aria-describedby="movieshelp"
+          placeholder="Search movies"
+          [(ngModel)]="movieSearched"
+        />
+      </div>
     </div>
-    <div class='panel-body'>
-      <div class="w-100 d-flex justify-content-between align-items-start mb-4">
-        <span class="badge my-badge-warning text-white align-items-center p-2">
-          Filtered by: {{ movieSearched }}
-        </span>
-  
-        <div class='w-25 d-flex flex-row'>
-          <input type="text" class="form-control" id="movies" aria-describedby="movieshelp" placeholder="Search movies"
-            [(ngModel)]='movieSearched'>
-        </div>
-      </div>
-  
-      <!-- List Movies -->
-      <div class="w-100 d-flex flex-row justify-content-between flex-wrap" *ngIf='products && products.length'>
-        <div class="d-flex flex-column mb-5" *ngFor='let movies of filteredMovies'>
 
-          <a class="text-white test" [routerLink]="['/movies', movies.imdbID, movieSearched]">
-            <span class="title text-white">Title</span>
-            <p class="text-title mt-2">{{ movies.Title }}</p>
+    <!-- List Movies -->
+    <div class="w-100 d-flex flex-row justify-content-between flex-wrap" *ngIf="products && products.length">
+      <div class="d-flex flex-column all-info justify-content-end mb-5" *ngFor="let movies of filteredMovies">
+        <div class="name-link">
+          <a class="text-white" [routerLink]="['/movies', movies.imdbID, movieSearched]">
+            <p class="text-title">{{ movies.Title }}</p>
           </a>
-
-          <div class="my-image">
-            <img *ngIf="movies.Poster" [src]='movies.Poster' [title]='movies.Title' [style.width.px]='imageWidth'
-              [style.margin.px]='imageMargin'>
-            <p *ngIf="!movies.Poster"> no image </p>
-          </div>
-
-          <div class="d-flex flex-row align-items-center text-white">
-            <span class="year-type mr-2">Year:</span>
-            {{ movies.Year }}
-          </div>
-          
-          <div class="d-flex flex-row align-items-center text-white">
-            <span class="year-type mr-2">Type:</span>
-            {{ movies.Type }}
-          </div>
-          <!--  <pm-star [rating]='movies.starRating' (ratingClicked)='onRatingClicked($event)'>
-          </pm-star> -->
         </div>
+
+        <div class="my-image">
+          <img class="img-thumbnail" *ngIf="movies.Poster" [src]="movies.Poster" [title]="movies.Title" />
+          <p *ngIf="!movies.Poster">no image</p>
+        </div>
+
+        <div class="d-flex flex-row align-items-center text-white">
+          <span class="year-type mr-2">Year:</span>
+          {{ movies.Year }}
+        </div>
+
+        <div class="d-flex flex-row align-items-center text-white">
+          <span class="year-type mr-2">Type:</span>
+          {{ movies.Type }}
+        </div>
+        <!--  <pm-star [rating]='movies.starRating' (ratingClicked)='onRatingClicked($event)'>
+          </pm-star> -->
       </div>
-  
+    </div>
+
     <!--     <table class="table table-hover table-dark text-secondary" *ngIf='products && products.length'>
           <thead class="text-white">
             <tr>
@@ -53,7 +58,7 @@
             </tr>
           </thead>
           <tbody> -->
-            <!--  <tr *ngFor='let product of filteredProducts'>
+    <!--  <tr *ngFor='let product of filteredProducts'>
                           <td>
                               <img *ngIf='showImage'
                                   [src]='product.imageUrl'
@@ -74,10 +79,10 @@
                               </pm-star>
                           </td>
                       </tr> -->
-  
-          <!--   <tr *ngFor='let movies of filteredMovies'>
+
+    <!--   <tr *ngFor='let movies of filteredMovies'>
               <!--  -->
-             <!--  <td>
+    <!--  <td>
                 <img *ngIf="movies.Poster" [src]='movies.Poster' [title]='movies.Title' [style.width.px]='imageWidth'
                   [style.margin.px]='imageMargin'>
                 <p *ngIf="!movies.Poster"> no image </p>
@@ -89,16 +94,15 @@
               <td>{{ movies.Year }}</td>
               <td>{{ movies.Type }}</td>
               <td> -->
-                <!--  <pm-star [rating]='movies.starRating'
+    <!--  <pm-star [rating]='movies.starRating'
                                   (ratingClicked)='onRatingClicked($event)'>
                               </pm-star> -->
-            <!--   </td>
+    <!--   </td>
             </tr>
           </tbody>
         </table> -->
-    </div>
   </div>
-  <div *ngIf='errorMessage' class='alert alert-danger'>
-    Error: {{ errorMessage }}
-  </div>
-  
+</div>
+<div *ngIf="errorMessage" class="alert alert-danger">
+  Error: {{ errorMessage }}
+</div>
