--- a/src/app/products/product-detail.component.html
+++ b/src/app/products/product-detail.component.html
@@ -1,9 +1,9 @@
 <div class='panel panel-primary' *ngIf='movie'>
-    <div class='panel-heading'>
+  <!--   <div class='panel-heading'>
         {{pageTitle + ': ' + movie.Title}}
-    </div>
+    </div> -->
 
-    <div class='panel-body'>
+    <div class='card panel-body'>
         <div class='row'>
             <div class='col-md-6'>
                 <div class='row'>
