--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -2,7 +2,7 @@
   <div class="panel-heading my-4 my-text-warning">
     <h3>{{ pageTitle }}</h3>
   </div>
-  <div class="panel-body">
+  <div class="panel-body wrapper">
     <div class="w-100 d-flex justify-content-between align-items-start mb-4">
       <span class="badge my-badge-warning text-white align-items-center p-2">
         Filtered by: {{ movieSearched }}
@@ -47,62 +47,14 @@
           </pm-star> -->
       </div>
     </div>
-
-    <!--     <table class="table table-hover table-dark text-secondary" *ngIf='products && products.length'>
-          <thead class="text-white">
-            <tr>
-              <th>Poster</th>
-              <th>Title</th>
-              <th>Year</th>
-              <th>Type</th>
-            </tr>
-          </thead>
-          <tbody> -->
-    <!--  <tr *ngFor='let product of filteredProducts'>
-                          <td>
-                              <img *ngIf='showImage'
-                                  [src]='product.imageUrl'
-                                  [title]='product.productName'
-                                  [style.width.px]='imageWidth'
-                                  [style.margin.px]='imageMargin'>
-                          </td>
-                          <td><a [routerLink]="['/products', product.productId]">
-                                  {{ product.productName }}
-                              </a>
-                          </td>
-                          <td>{{ product.productCode | lowercase | convertToSpaces: '-' }}</td>
-                          <td>{{ product.releaseDate }}</td>
-                          <td>{{ product.price | currency:'USD':'symbol':'1.2-2'}}</td>
-                          <td>
-                              <pm-star [rating]='product.starRating'
-                                  (ratingClicked)='onRatingClicked($event)'>
-                              </pm-star>
-                          </td>
-                      </tr> -->
-
-    <!--   <tr *ngFor='let movies of filteredMovies'>
-              <!--  -->
-    <!--  <td>
-                <img *ngIf="movies.Poster" [src]='movies.Poster' [title]='movies.Title' [style.width.px]='imageWidth'
-                  [style.margin.px]='imageMargin'>
-                <p *ngIf="!movies.Poster"> no image </p>
-              </td>
-              <td><a class="text-white" [routerLink]="['/movies', movies.imdbID, movieSearched]">
-                  {{ movies.Title }}
-                </a>
-              </td>
-              <td>{{ movies.Year }}</td>
-              <td>{{ movies.Type }}</td>
-              <td> -->
-    <!--  <pm-star [rating]='movies.starRating'
-                                  (ratingClicked)='onRatingClicked($event)'>
-                              </pm-star> -->
-    <!--   </td>
-            </tr>
-          </tbody>
-        </table> -->
   </div>
 </div>
-<div *ngIf="errorMessage" class="alert alert-danger">
+<!-- <div *ngIf="errorMessage" class="alert alert-danger">
   Error: {{ errorMessage }}
+</div>
+ -->
+<!-- Error message -->
+<div *ngIf="errorMessage" class="alert alert-dismissible alert-danger text-white">
+  <button type="button" class="close" data-dismiss="alert">&times;</button>
+  <strong>Error: </strong> {{ errorMessage }} 
 </div>
