--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,14 @@
   </div>
 </mat-toolbar>
 
-<div class='container'>
+<div class="container">
   <router-outlet></router-outlet>
 </div>
+
+<footer class="container-fluid ng-footer py-3">
+    <div class="d-flex justify-content-center">
+      <i class="fas fa-language logo-footer"></i>
+      <small class="d-flex justify-content-center align-items-center py-1 text-white">© Tallinn - Estonia 2019 - 2020</small>
+    </div>
+</footer>
+
