--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,6 @@
   </div>
 </mat-toolbar>
 
-<div class='container'>
-  <router-outlet></router-outlet>
+<div class='container'   [@slideInAnimation]="o.isActivated ? o.activatedRoute : ''" >
+  <router-outlet #o="outlet"></router-outlet>
 </div>
