--- a/src/app/home/welcome.component.html
+++ b/src/app/home/welcome.component.html
@@ -1,21 +1,19 @@
 ﻿<div class="panel panel-primary">
-    <div class="panel-heading">
+    <h3 class="panel-heading my-4 my-text-warning">
         {{pageTitle}}
-    </div>
+    </h3>
     <div class="panel-body"  >
-        <div class="row" >
-            <img src="./assets/images/logo.jpg" 
-                 class="img-responsive center-block"
-                 style="max-height:300px;padding-bottom:50px"/>
+        <div class="d-flex justify-content-center align-items-center" >
+            <img src="./assets/images/welcome.png" class="welcome-image center-block"/>
         </div>
-        <div class="row"  >
+      <!--   <div class="row"  >
             <div class="text-center">Developed by:</div>
-            <h3 class="text-center">Marbifer</h3>
+            <h3 class="text-center">Marcos Matarrese</h3>
 
             <div class="text-center">@marbifer</div>
             <div class="text-center">
                 <a href="">marbifer</a>
             </div>
-        </div>
+        </div> -->
     </div>
 </div>
