--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<span class="fa fa-spinner spinner"
+      *ngIf="loading"></span>
+
 <!--The whole content below can be removed with the new code.-->
 <mat-toolbar class="navbar navbar-dark bg-dark text-white my-nav d-flex justify-content-between" color="primary">
   <a class="" href="#">{{ pageTitle }}</a>
@@ -8,6 +11,6 @@
   </div>
 </mat-toolbar>
 
-<div class='container'   [@slideInAnimation]="o.isActivated ? o.activatedRoute : ''" >
+<div [ngStyle]="{'opacity': loading ? '0.2' : null }"  class='container'   [@slideInAnimation]="o.isActivated ? o.activatedRoute : ''" >
   <router-outlet #o="outlet"></router-outlet>
 </div>
