--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -1,3 +1,6 @@
+<span class="fa fa-spinner spinner"
+      *ngIf="loading"></span>
+
 <div class="panel panel-primary">
   <div class="panel-heading my-4 my-text-warning">
     <h3>{{ pageTitle }}</h3>
