--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
+@import "~font-awesome/css/font-awesome.min.css";
 /********* SASS VARIABLES *********/
 
 $white: #ffffff;
@@ -99,12 +100,12 @@ body {
       background-repeat: no-repeat;
       background-size: cover;
       max-height: 326px;
-  
+
       img {
         height: 268px !important;
       }
     }
-  
+
     .year-type {
       font-weight: 900;
       letter-spacing: 0.5px;
@@ -165,6 +166,4 @@ body {
       font-size: 1.2rem;
     }
   }
-
 }
-
